maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
  if(getIndication() == 9999){
                  ^